--- a/Piano/index1.html
+++ b/Piano/index1.html
@@ -17,10 +17,10 @@
         
         <nav class="nav">
           <ul>
-            <li>Home</li>
+            <li><a href="index1.html">Home</a></li>
             <li><a href="about/About.html">About</a></li>
-            <li>Services</li>
-            <li>Contact</li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contact</a></li>
           </ul>
         </nav>
       </header>
@@ -38,7 +38,7 @@
 
         <section>
           <h2>Contact</h2>
-          <p>Email us at floodguitarstudy@gmail.com</p>
+          <p><strong>Email:</strong><a href="mailto:floodguitarstudy@gmsil.com?subject=Hello">floodguitarstudy@gmail.com</a></p>
           <address>
             Flood Guitar Study<br>
             Louisville, KY 40299
