--- a/Piano/index1.html
+++ b/Piano/index1.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div>
+    <script src="script.js"></script>
       <div class="tuning">
         <img class="img" src="img/Flood Tuning_-48.jpg" alt="Piano keyboard" title="Piano Keybpard music">
       </div>
@@ -16,7 +16,14 @@
         <h1 class="header">Flood Piano & Guitar Service</h1>
         
         <nav class="nav">
-          <ul>
+          <button onclick="myFunction()" class="dropbtn">
+            <div class="container">
+              <div class="bar1"></div>
+              <div class="bar2"></div>
+              <div class="bar3"></div>
+            </div>
+          </button>
+          <ul id="myDropdown" class="dropdown-content">
             <li><a href="index1.html">Home</a></li>
             <li><a href="about/About.html">About</a></li>
             <li><a href="services.html">Services</a></li>
@@ -27,30 +34,32 @@
 
       <main>
 
-        <section>
+        <div class="intro">
           <h2>What is Flood Guitar Study?</h2>
           <p>Hello. My name is James Flood Jr. I am guitar teacher and piano technician, located in Louisville Kentucky.
             I would love to help you learn how to become a proficient guitar player or bring your piano back to it's original performance level.
             Please take a look at the services offered. I hope to be able to help you accomplish your musical goals. Stay cool and enjoy!
             -James Flood Jr.
           </p>
-        </section>
+        </div>
 
-        <section>
+        <div class="mainpic">
+          <img class="img" src="img/Flood Tuning_-103.jpg" alt="Piano accessories" title="Sheet music and tools">
+        </div>
+
+        <div class="contact">
           <h2>Contact</h2>
           <p><strong>Email:</strong><a href="mailto:floodguitarstudy@gmsil.com?subject=Hello">floodguitarstudy@gmail.com</a></p>
           <address>
             Flood Guitar Study<br>
             Louisville, KY 40299
           </address>
-        </section>
+        </div>
 
       </main>
 
       <footer>
         <p>&copy;2020 Flood Guitar Study</p>
       </footer>
-
-    </div>
   </body>
 </html>
